tools/tests/errors/surf_lex_10.experr
error: invalid numeric literal '0b'